outputs_20260408-010853-2127533d/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:38:45: error: 'IfxGtm_TOM1_0_TOUT0_P02_0_OUT' undeclared (first use in this function)
   38 | #define PHASE_U_HS   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_0_TOUT0_P02_0_OUT)
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:97:40: note: in expansion of macro 'PHASE_U_HS'
   97 |     output[0].pin                    = PHASE_U_HS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:38:45: note: each undeclared identifier is reported only once for each function it appears in
   38 | #define PHASE_U_HS   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_0_TOUT0_P02_0_OUT)
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:97:40: note: in expansion of macro 'PHASE_U_HS'
   97 |     output[0].pin                    = PHASE_U_HS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:39:45: error: 'IfxGtm_TOM1_0N_TOUT7_P02_7_OUT' undeclared (first use in this function)
   39 | #define PHASE_U_LS   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_0N_TOUT7_P02_7_OUT)
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:98:40: note: in expansion of macro 'PHASE_U_LS'
   98 |     output[0].complementaryPin       = PHASE_U_LS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:40:45: error: 'IfxGtm_TOM1_1_TOUT1_P02_1_OUT' undeclared (first use in this function)
   40 | #define PHASE_V_HS   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_1_TOUT1_P02_1_OUT)
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:104:40: note: in expansion of macro 'PHASE_V_HS'
  104 |     output[1].pin                    = PHASE_V_HS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:41:45: error: 'IfxGtm_TOM1_12_TOUT4_P02_4_OUT' undeclared (first use in this function)
   41 | #define PHASE_V_LS   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_12_TOUT4_P02_4_OUT)
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:105:40: note: in expansion of macro 'PHASE_V_LS'
  105 |     output[1].complementaryPin       = PHASE_V_LS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:42:45: error: 'IfxGtm_TOM1_5_TOUT2_P02_2_OUT' undeclared (first use in this function)
   42 | #define PHASE_W_HS   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_5_TOUT2_P02_2_OUT)
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:111:40: note: in expansion of macro 'PHASE_W_HS'
  111 |     output[2].pin                    = PHASE_W_HS;
      |                                        ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:43:45: error: 'IfxGtm_TOM1_13_TOUT5_P02_5_OUT' undeclared (first use in this function)
   43 | #define PHASE_W_LS   ((IfxGtm_Pwm_ToutMap*)&IfxGtm_TOM1_13_TOUT5_P02_5_OUT)
      |                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_jd6tkwty\src\gtm_tom_3_phase_inverter_pwm.c:112:40: note: in expansion of macro 'PHASE_W_LS'
  112 |     output[2].complementaryPin       = PHASE_W_LS;
      |                                        ^~~~~~~~~~
